fix the landing page spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -783,7 +783,7 @@ article {
   float: left; }
 
 .gallery-title {
-  padding: 1.666em 0;
+  padding: 1.666em 0 0.666em;
   font-size: 1.5em;
   line-height: 1em;
   text-align: center; }
