--- a/css/ui/_main-content.scss
+++ b/css/ui/_main-content.scss
@@ -44,7 +44,7 @@ article {
 }
 
 .gallery-title {
-    padding: 1.666em 0;
+    padding: 1.666em 0 .666em;
     font-size: 1.5em;
     line-height: 1em;
     text-align: center;
